# lab-python-calculator

./: README.md  pyproject.toml  requirements.txt
src/: calculation.py  calculator_runner.py  common.py  conversion_to_rpn.py  main.py  tokenization.py
tests/: test_calculator.py
